--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
   </head>
   <body>
 
@@ -10,12 +11,12 @@
     <h1 id="home">Broadway Design</h1>
 
     <!-- Header/Navigation -->
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#process">Abput</a>
-      <a href="#work">Work</a>
-      <a href="#team">Team</a>
-      <a href="#contact">Contact</a>
+    <nav class="links">
+      <br><br><a href="#home">Home</a>
+      <br><br><a href="#process">About</a>
+      <br><br><a href="#work">Work</a>
+      <br><br><a href="#team">Team</a>
+      <br><br><a href="#contact">Contact</a>
     </nav>
 
     <!-- Process -->
@@ -44,11 +45,13 @@
         <br>Twitter: @test</p>
 
     <!-- Footer -->
-    <p>© Broadway 2016 <a href="#home">Home</a>
-                       <a href="#process">About</a>
-                       <a href="#work">Work</a>
-                       <a href="#team">Team</a>
-                       <a href="#contact">Contact</a></p>
+      <p>© Broadway 2016 <div class="links">
+                           <a href="#home">Home</a>
+                           <a href="#process">About</a>
+                           <a href="#work">Work</a>
+                           <a href="#team">Team</a>
+                           <a href="#contact">Contact</a></p>
+                         </div>
 
   </body>
 </html>
