--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <h1 id="home">Broadway Design</h1>
 
     <!-- Header/Navigation -->
-    <nav class="links">
-      <br><br><a href="#home">Home</a>
-      <br><br><a href="#process">About</a>
-      <br><br><a href="#work">Work</a>
-      <br><br><a href="#team">Team</a>
-      <br><br><a href="#contact">Contact</a>
-    </nav>
+    <div class="links">
+      <nav>
+        <br><br><a href="#home">Home</a>
+        <br><br><a href="#process">About</a>
+        <br><br><a href="#work">Work</a>
+        <br><br><a href="#team">Team</a>
+        <br><br><a href="#contact">Contact</a>
+      </nav>
+    </div>
 
     <!-- Process -->
     <h2 id="process">Our Process</h2>
@@ -32,7 +34,7 @@
         <p>We put everything we have into our work.</p>
 
     <!-- Second Header/Divider -->
-    <h3>Designed in New York</h3>
+    <h3 id="new-york">Designed in New York</h3>
 
     <!-- More Information -->
     <h3 id="work">Portfolio</h3>
@@ -45,7 +47,7 @@
         <br>Twitter: @test</p>
 
     <!-- Footer -->
-      <p>© Broadway 2016 <div class="links">
+      <p>© Broadway 2016 <div>
                            <a href="#home">Home</a>
                            <a href="#process">About</a>
                            <a href="#work">Work</a>
